Implemented basic, but working game functionality It works with the modules created before. Allows to play once.

--- a/Blackjack.vcxproj
+++ b/Blackjack.vcxproj
@@ -88,6 +88,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -102,6 +103,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -140,6 +142,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Blackjack.cpp" />
+    <ClCompile Include="BlackjackIO.cpp" />
+    <ClCompile Include="HandleCards.cpp" />
+    <ClCompile Include="MyUtils.cpp" />
+    <ClCompile Include="RandomCardsGenerator.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="BlackjackIO.h" />
+    <ClInclude Include="Decision.h" />
+    <ClInclude Include="HandleCards.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="RandomCardsGenerator.h" />
+    <ClInclude Include="MyUtils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
